--- a/A/css/students.css
+++ b/A/css/students.css
@@ -2,3 +2,36 @@
   display: table;
   margin: auto;
 }
+
+table {
+	font-size:15pt;
+	border-collapse:collapse;
+}
+
+img {
+	border-radius:50%;
+}
+
+tr {
+	height:50px;
+}
+
+tr:nth-child(even){
+	background-color:lightgray;
+}
+
+td:nth-child(1){
+	width:10px;
+}
+
+td:nth-child(2){
+	width:100px;
+}
+
+td:nth-child(3){
+	width:100px;
+}
+
+td:nth-child(4){
+	width:200px;
+}
